k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform-app
  labels:
    app: platform-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: platform-app
  template:
    metadata:
      labels:
        app: platform-app
    spec:
      containers:
        - name: app
          image: us-central1-docker.pkg.dev/project-4d29b45d-dd36-455e-96a/devops-images/devops-k8s-platform:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: platform-svc
spec:
  selector:
    app: platform-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
